# ramster

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.sh
data/best_times/: 1.txt  2.txt  5.txt  8.txt
doc/: bug-report.csv
docs/: bug-report.csv
ext/: project_path.hpp
hooks/: commit-msg
levels/: Demo.json  Demo.tmj  lab.tmj  level1.tmj  level2.tmj  level3.tmj  level4.tmj  level5.tmj  level6.tmj  snake.tmj  tower.tmj  tunnel.tmj  tunnelsmall.tmj  tutorial.tmj  under.tmj
shaders/: egg.vs.glsl  fireball.fs.glsl  parallax.fs.glsl  parallax.vs.glsl  player.vs.glsl  translucent.fs.glsl  vignette.fs.glsl
src/: ai_system.cpp  ai_system.hpp  common.cpp  common.hpp  main.cpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp  render_system_init.cpp  terrain.cpp  terrain.hpp  tile.hpp  world_init.cpp  world_init.hpp  world_system.cpp  world_system.hpp
src/tinyECS/: components.hpp  registry.hpp
